
[TestFunction/set_focus_to_window_if_already_in_the_focused_workspace_but_not_focused - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 1234,
    },
}
aerospace-scratchpad show Finder

Output
Window '5678 | Finder ' is showed

Error
<nil>
---

[TestFunction/moves_a_window_to_scratchpad_by_pattern - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 5678,
    },
}
aerospace-scratchpad show Finder

Output
Window '5678 | Finder ' hidden to scratchpad

Error
<nil>
---

[TestFunction/summon_the_window_to_the_current_workspace_if_in_another_workspace - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 0,
    },
    {
        Windows: {
            {WindowID:91011, WindowTitle:"", AppName:"Terminal", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws2"},
        FocusedWindowId: 91011,
    },
}
aerospace-scratchpad show Finder

Output
Window '5678 | Finder ' is summoned

Error
<nil>
---

[TestShowCmd/set_focus_to_window_if_already_in_the_focused_workspace_but_not_focused - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 1234,
    },
}
aerospace-scratchpad show Finder

Output
Window '5678 | Finder ' is focused

Error
<nil>
---

[TestShowCmd/moves_a_window_to_scratchpad_by_pattern - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 5678,
    },
}
aerospace-scratchpad show Finder

Output
Window '5678 | Finder ' hidden to scratchpad

Error
<nil>
---

[TestShowCmd/summon_the_window_to_the_current_workspace_if_in_another_workspace - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 0,
    },
    {
        Windows: {
            {WindowID:91011, WindowTitle:"", AppName:"Terminal", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws2"},
        FocusedWindowId: 91011,
    },
}
aerospace-scratchpad show Finder

Output
Window '5678 | Finder ' is summoned

Error
<nil>
---

[TestShowCmd/moves_the_current_focused_window_to_scratchpad_when_empty - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 5678,
    },
}
aerospace-scratchpad show 

Output

Error
<nil>
---


[TestShowCmd/fails_when_pattern_is_empty - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 5678,
    },
}
aerospace-scratchpad show 

Output
Error: <pattern> cannot be empty

Error
<nil>
---

[TestShowCmd/MultipleWindows/brings_all_windows_to_focused_workspace - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:5678, WindowTitle:"", AppName:"Finder1", AppBundleID:"", Workspace:"ws1"},
            {WindowID:5679, WindowTitle:"", AppName:"Finder2", AppBundleID:"", Workspace:"ws1"},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 0,
    },
    {
        Windows: {
            {WindowID:91011, WindowTitle:"", AppName:"Terminal", AppBundleID:"", Workspace:"ws2"},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws2"},
        FocusedWindowId: 91011,
    },
}
aerospace-scratchpad show Finder

Output
Window '5678 | Finder1  | ws1' is summoned
Window '5679 | Finder2  | ws1' is summoned

Error
<nil>
---

[TestShowCmd/MultipleWindows/sends_all_windows_to_scratchpad_if_at_least_one_window_is_focused - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws1"},
        FocusedWindowId: 0,
    },
    {
        Windows: {
            {WindowID:5678, WindowTitle:"", AppName:"Finder1", AppBundleID:"", Workspace:"ws2"},
            {WindowID:5679, WindowTitle:"", AppName:"Finder2", AppBundleID:"", Workspace:"ws2"},
            {WindowID:91011, WindowTitle:"", AppName:"Terminal", AppBundleID:"", Workspace:"ws2"},
        },
        Workspace:       &aerospace.Workspace{Workspace:"ws2"},
        FocusedWindowId: 5678,
    },
}
aerospace-scratchpad show Finder

Output
Window '5678 | Finder1  | ws2' is focused
Window '5679 | Finder2  | ws2' is focused

Error
<nil>
---
